Add image, description, and ingredients for lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,32 @@
     <body>
         <h1>Lasagna</h1>
         <a href="../index.html">Home</a>
+        <br>
+        <img src="../images/Lasagna-Recipe.webp">
+        <h2>Description</h2>
+        <p>This recipe has simple ingredients but tons of flavor with a creamy ricotta mixture, savory meat sauce, and lots of mozzarella cheese. </p>
+        <p>This is a great freezer meal, make-ahead recipe, and leftovers freeze and reheat super well. </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>15 oz. ricotta cheese, 2 cups</li>
+            <li>1 large egg</li>
+            <li>2 cups mozzarella cheese</li>
+            <li>¾ cup Parmesan cheese, freshly grated</li>
+            <li>2 teaspoons Italian seasoning</li>
+            <li>½ teaspoon salt</li>
+            <li>¼ tsp pepper</li>
+            <li>1 tablespoon olive oil</li>
+            <li>1 yellow onion, finely diced</li>
+            <li>¾ lb. ground beef</li>
+            <li>¾ lb. ground Italian sausage</li>
+            <li>3 cloves garlic, minced</li>
+            <li>½ cup chicken broth</li>
+            <li>40 oz. marinara sauce</li>
+            <li>1 tablespoon tomato paste</li>
+            <li>1 teaspoon hot sauce</li>
+            <li>1 teaspoon Worcestershire sauce</li>
+            <li>12 lasagna noodles, plus extra in case of breakage</li>
+            <li>2.5 cups mozzarella cheese</li>
+        </ul>
     </body>
 </html>
