Add link to PB cookies on home page and fix incorrect heading and title

--- a/recipes/pb-cookies.html
+++ b/recipes/pb-cookies.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Peanut Butter Cookies</title>
+        <title>Odin Recipes | Peanut Butter Cookies</title>
     </head>
     <body>
-        <h1>Lasagna</h1>
+        <h1>Peanut Butter Cookies</h1>
         <a href="../index.html">Home</a>
         <br>
         <img src="../images/244614-3-ingredient-peanut-butter-cookies-DDMFS-4x3-3df34040153d43bc9c8e566fb311a88e.webp">
