--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/pb-cookies.html">Peanut Butter Cookies</a></li>
+            <li><a href="./recipes/mac-and-cheese.html">Mac and Cheese</a></li>
         </ul>
     </body>
 </html>
