Change image to mac and cheese

--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -8,7 +8,7 @@
         <h1>Mac and Cheese</h1>
         <a href="../index.html">Home</a>
         <br>
-        <img src="../images/244614-3-ingredient-peanut-butter-cookies-DDMFS-4x3-3df34040153d43bc9c8e566fb311a88e.webp">
+        <img src="../images/__opt__aboutcom__coeus__resources__content_migration__serious_eats__seriouseats.com__2021__02__20210214-stovetop-mac-cheese-reshoot-vicky-wasik-9-0760b642ca704cf8b2c5121a363a60a2.webp">
         <h2>Description</h2>
         <p>his macaroni and cheese—this pot of creamy, gooey, cheesy, glorious macaroni and cheese—was made with three ingredients in about 10 minutes. Seriously. That's one fewer ingredient than you need to add to the pot to make a box of Kraft macaroni and cheese.</p>
         <h2>Ingredients</h2>
